add: enhance index.html with meta tags for SEO and update router to include About page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Markdown 顯示系統</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="在線Markdown文件顯示系統 - 輕鬆查看和分享Markdown文件">
+    <meta name="keywords" content="markdown, 顯示器, 文件閱讀, markdown預覽, 在線工具">
+    <meta property="og:title" content="Markdown 顯示系統">
+    <meta property="og:description" content="在線Markdown文件顯示系統 - 輕鬆查看和分享Markdown文件">
+    <meta property="og:type" content="website">
+    <link rel="canonical" href="https://mdviewer.yuanhau.com">
+    <link rel="icon" type="image/x-icon" href="/vite.svg">
+    <title>Markdown 顯示系統 | 在線Markdown文件預覽工具</title>
+    <script defer src="https://vd.yuanhau.com/script.js" data-website-id="50f7b576-798f-4fca-9897-e981d49cc5d5"></script>
   </head>
   <body>
     <div id="app"></div>
